radio interview with carman added

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -211,17 +211,149 @@
         
         <details> 
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary> 
-            <div class="video-box-modal can-sec"> <h3 class="video-heading">Long-form Interviews</h3> 
-                <p> <strong>New Jersey Constitutional Republican Radio Hour</strong> — on-air conversation with Steven Solof (WVLT, August 2025). Focus: 
-                    civic education, governance, and expectations of public officials. Transcript highlights and source excerpts below. 
-                </p> 
+            <div class="video-box-modal can-sec">
+            <h3 class="video-heading">2025 New Jersey Constitutional Republicans Interview With J.R. Carman</h3>
+
+            <iframe src="https://www.youtube.com/embed/Bh7WDuRo7zA?si=Qv9g6YyR9UFCD7a-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+
+            <br>
+            <br>
+
+            <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                <br>
+                <br>
+                <div style="padding: 15px 25px; text-align: left;">
+                <p>
+                    Hopewell school board member <strong>J.R. Carman</strong> (host of the <em>New Jersey Constitutional Republican Radio Hour</em>) sits 
+                    down with <strong>Steven Solof</strong> of InformTheVoteNJ.com to connect constitutional foundations with local civic practice. We dig 
+                    into why the U.S. is a<strong>democratically elected constitutional federal republic</strong> (not pure democracy), how 
+                    <strong>populism</strong> and reaction politics erode trust, why <strong>character</strong> and <strong>transparency</strong> matter in 
+                    local candidates, and how <strong>civics education</strong> (including local civics) underpins an informed electorate.
+                    We also touch <strong>term limits vs. educated voters</strong>, the <strong>Millville petition</strong> kerfuffle, and classic 
+                    insights from <strong>Madison, Hamilton, Jefferson,</strong> and <strong>Adams</strong>.
+                </p>
+                </div>
+            </details>
+
+            <br>
+            <br>
+
+            <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and 
+                    takeaways ⏳</summary>
+                <div class="video-summary" style="margin-top: 1em;">
+                <h2>Interview Summary – J.R. Carman</h2>
+                <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                    <thead>
+                    <tr>
+                        <th style="text-align: left;">Timestamp</th>
+                        <th style="text-align: left;">Topic</th>
+                        <th style="text-align: left;">Key Takeaways</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>0:00</td>
+                        <td>Intro &amp; Framing</td>
+                        <td>Carman opens the show and frames the discussion.</td>
+                    </tr>
+                    <tr>
+                        <td>0:55</td>
+                        <td>InformTheVoteNJ Origin</td>
+                        <td>Solof explains the project’s origin: closing local information gaps so voters can make adult-level decisions efficiently.</td>
+                    </tr>
+                    <tr>
+                        <td>3:00</td>
+                        <td>Shared Mission</td>
+                        <td>Both aim to educate the public on government structure and civic responsibility.</td>
+                    </tr>
+                    <tr>
+                        <td>4:30</td>
+                        <td>Republic ≠ Pure Democracy</td>
+                        <td>“We the People” established a Constitution that constrains majority rule; representatives must operate within it.</td>
+                    </tr>
+                    <tr>
+                        <td>7:00</td>
+                        <td>Populism &amp; Majority Tyranny</td>
+                        <td>Populism = emotional, reactionary governance; leads to “their way or the highway.”</td>
+                    </tr>
+                    <tr>
+                        <td>7:45</td>
+                        <td>Article Framing</td>
+                        <td>Precision in terms matters; character of officials is central to governmental health.</td>
+                    </tr>
+                    <tr>
+                        <td>10:00</td>
+                        <td>Why Enumerate Rights</td>
+                        <td>Bill of Rights protects minorities even where protections were implied; guardrail against majority overreach.</td>
+                    </tr>
+                    <tr>
+                        <td>11:20</td>
+                        <td>Representatives, Not “Leaders”</td>
+                        <td>Local vetting matters. Millville petition confusion shows how low trust + clerical errors fuel conspiracy thinking; Carman saw 
+                            similar issues.</td>
+                    </tr>
+                    <tr>
+                        <td>14:15</td>
+                        <td>Character Over Sales</td>
+                        <td>Culture rewards sales pitches; both parties excuse lapses if “our side” benefits. Transparency helps pierce the marketing.</td>
+                    </tr>
+                    <tr>
+                        <td>20:15</td>
+                        <td>Public Trust &amp; Tribalism</td>
+                        <td>Once you seek public office, you serve the public trust. Demagoguery reframes policy as tribal warfare.</td>
+                    </tr>
+                    <tr>
+                        <td>20:15&ndash;27:00</td>
+                        <td>The Civics Gap</td>
+                        <td>STEM crowded out civics/history; vacuum filled by ideological texts without foundational context—students need balanced 
+                            civics early.</td>
+                    </tr>
+                    <tr>
+                        <td>27:00</td>
+                        <td>What’s Taught Now</td>
+                        <td>Hopewell Crest: civics at every grade level; other districts vary. Beware broad-brushing and sound-bite oversimplification.</td>
+                    </tr>
+                    <tr>
+                        <td>29:00</td>
+                        <td>Term Limits vs. Education</td>
+                        <td>Term limits are often a convenience play; better solution is an educated electorate that demands virtue/competence.</td>
+                    </tr>
+                    <tr>
+                        <td>37:00</td>
+                        <td>Human Nature &amp; Virtue</td>
+                        <td>Founders anticipated human depravity; Adams/Lincoln stress morality, law, and “political religion” (reverence for law).</td>
+                    </tr>
+                    <tr>
+                        <td>42:00</td>
+                        <td>Core Takeaways</td>
+                        <td>Character defines public service; Constitution relies on moral officials; modern politics often falls short; NJ Constitution 
+                            implies duty to educate citizens.</td>
+                    </tr>
+                    <tr>
+                        <td>46:20</td>
+                        <td>Caller Segment</td>
+                        <td>Caller questions spark brief history/parties discussion and checks/balances context.</td>
+                    </tr>
+                    <tr>
+                        <td>52:15</td>
+                        <td>Final Thoughts</td>
+                        <td>Minimal vetting baseline: publish a platform, do interviews, be accessible—if you can’t clear that bar, how will you serve in 
+                            office?</td>
+                    </tr>
+                    </tbody>
+                </table>
+                </div>
+            </details>
             </div>
-         </details>
+        </details>
 
         <br><br>
 
-        <div class="gauge-box"> <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Mixed — Statement + Radio Interview; Limited 
-            Specifics</h4> <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"> <button class="candidate-ext-site">Transparency Standards Explained</button> </a> 
+        <div class="gauge-box"> <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average to Above Average 
+            </h4> <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"> <button class="candidate-ext-site">Transparency Standards Explained</button> </a> 
             <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt=""> 
             <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> 
         </div>
