quick adjustments on quick summary and anectode on carman

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -139,7 +139,9 @@
                     recent long-form radio conversation with InformTheVoteNJ, Carman discussed civic education and the character of public 
                     officials, noting (on-air) that Hopewell Crest incorporates civics in every grade and identifying himself as the Board’s 
                     curriculum committee chair. District-specific plans, measurable targets, or recent vote explanations were not provided in 
-                    writing. <br><br> Click the red x at the top of this box and then scroll down for more in-depth information and sources. </p> 
+                    writing or on-air, but if he provides that at some point during the campaign season, he will be on track to being fully transparent this election. 
+                    <br><br>
+                    Click the red x at the top of this box and then scroll down for more in-depth information and sources. </p> 
             </div> 
         </dialog> 
         
@@ -151,13 +153,13 @@
                     he offered a public statement and participated in a substantive radio discussion (good accessibility), but he did not complete the 
                     site’s structured questionnaire and has not published an issue-by-issue brief with concrete, current district specifics. 
                     <br><br> 
-                    The statement highlights values—safety, academics, parent partnership, staff support, and fiscal stewardship—and the interview focuses 
-                    on civic education and governance philosophy. What’s still missing for voters are concise, written stances on current Hopewell Crest 
-                    priorities (e.g., safety implementation details, budget/levy outlook, facilities, staffing, curriculum changes), recent vote rationales, 
-                    and measurable goals for the next term. 
+                    Carman's public statement highlights values—safety, academics, parent partnership, staff support, and fiscal stewardship—and the interview focuses 
+                    on civic education and governance philosophy... all of which fit into a solid agenda and governing ideology.
+                    What’s still missing for voters are concise, written stances on current Hopewell Crest priorities (e.g., safety implementation details, budget/levy outlook, facilities, staffing, 
+                    curriculum changes), recent vote rationales, and measurable goals for the next term. Such clarification would fit neatly into an issues section on his page.
                     <br><br>
                     A short follow-up—bullet list of issues and positions, examples of recent board actions,and/or a 30–60 minute Q&amp;A centered on district 
-                    decisions—would quickly move this toward a higher transparency tier. 
+                    issues-would quickly move this toward a higher transparency tier. 
                     <br><br> 
                     Click the red x at the top of this box and then scroll down for more in-depth information and sources. 
                 </p> 
@@ -228,7 +230,7 @@
                 <p>
                     Hopewell school board member <strong>J.R. Carman</strong> (host of the <em>New Jersey Constitutional Republican Radio Hour</em>) sits 
                     down with <strong>Steven Solof</strong> of InformTheVoteNJ.com to connect constitutional foundations with local civic practice. We dig 
-                    into why the U.S. is a<strong>democratically elected constitutional federal republic</strong> (not pure democracy), how 
+                    into why the U.S. is a <strong>democratically elected constitutional federal republic</strong> (not pure democracy), how 
                     <strong>populism</strong> and reaction politics erode trust, why <strong>character</strong> and <strong>transparency</strong> matter in 
                     local candidates, and how <strong>civics education</strong> (including local civics) underpins an informed electorate.
                     We also touch <strong>term limits vs. educated voters</strong>, the <strong>Millville petition</strong> kerfuffle, and classic 
