carmans websites added

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -186,7 +186,14 @@
             <div class="candidate-pic-box-content"> 
                 <h4 class="sub-heading" style="text-align: center;">Websites</h4> 
                 <div class="website">
-                    <p style="text-align:center; margin: 0.75rem 0;">No official campaign links submitted.</p> 
+                    <a href="https://www.facebook.com/JohnRobertCarman/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
+
+                    <a href="https://njcr4restores.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Constitutional Republicans Site</button></a>
+                    <a href="https://www.facebook.com/groups/www.njconstitutionalrepublicans.org" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">New Jersey Constitutional Republicans Facebook</button></a>
+                    <a href="https://www.facebook.com/NJCR4REFORM" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"> The New Jersey Constitutional Republicans Facebook</button></a>
+                    <a href="https://www.facebook.com/groups/1399897153514416" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site"> Constitutional Republicans Academia Facebook</button></a>
+                    <a href="https://www.youtube.com/channel/UCip6rdoArrF2tpwqWNT_fPA" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">NJ Constitutional Republicans YouTube</button></a>
+
                 </div>
             
                 <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
