sooy page update 1

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -149,17 +149,17 @@
             <div class="modal-content"> <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close"> 
                 <h4 class="quick-sum">Rating Explanation</h4> 
                 <h6 class="page-title">J.R. Carman</h6> 
-                <p> Relative to the Cumberland County status quo, Carman’s accessibility is <strong>mixed</strong> as of <strong>August 25, 2025</strong>: 
-                    he offered a public statement and participated in a substantive radio discussion (good accessibility), but he did not complete the 
-                    site’s structured questionnaire and has not published an issue-by-issue brief with concrete, current district specifics. 
+                <p> Relative to the Cumberland County status quo, Carman’s transparency and accessibility is <strong>on the right track</strong> as of <strong>August 25, 2025</strong>: 
+                    he offered a public statement and participated in a substantive radio discussion (good accessibility), and is booked for a campaign-specific interview on the InformTheVoteNJ
+                    radio hour on Tuesday 9/9 from 5-6pm. That being said, he did not complete the site’s structured questionnaire and has not published an issue-by-issue brief with concrete, 
+                    current district specifics and action plans. 
                     <br><br> 
                     Carman's public statement highlights values—safety, academics, parent partnership, staff support, and fiscal stewardship—and the interview focuses 
                     on civic education and governance philosophy... all of which fit into a solid agenda and governing ideology.
                     What’s still missing for voters are concise, written stances on current Hopewell Crest priorities (e.g., safety implementation details, budget/levy outlook, facilities, staffing, 
                     curriculum changes), recent vote rationales, and measurable goals for the next term. Such clarification would fit neatly into an issues section on his page.
                     <br><br>
-                    A short follow-up—bullet list of issues and positions, examples of recent board actions,and/or a 30–60 minute Q&amp;A centered on district 
-                    issues-would quickly move this toward a higher transparency tier. 
+                    A short follow-up—a list of issues, positions, and action plans would quickly move this toward a higher transparency tier. 
                     <br><br> 
                     Click the red x at the top of this box and then scroll down for more in-depth information and sources. 
                 </p> 
