sooy page update 2

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -169,20 +169,17 @@
             <h4 class="quick-sum">Rating Explanation</h4>
             <h6 class="page-title">Joe Sooy</h6>
             <p>
-            In long-form conversation, Sooy is blunt, detail-oriented, and comfortable defending trade-offs—often insisting on
-            “show me the rule” when staff say something can’t be done. He consistently ties talking points to specific
-            processes (UEZ rules, redevelopment bonding, grievance procedures, procurement pathways), which makes follow-up
-            verification straightforward for voters.
+            In conversation, Sooy shows a command of details and a willingness to defend trade-offs, often grounding answers in the mechanics of projects, ordinances, or finance rules. That 
+            clarity is valuable, but what rounds out a strong campaign is how accessible that clarity becomes to the public. Beyond long interviews, voters usually look for touchpoints like 
+            meet-and-greets, an official campaign website, or even short, regular updates on project status.
             <br><br>
-            Millville’s culture of public debate can look contentious on camera, but that’s part of what transparency requires:
-            hashing out disagreements in the open rather than behind closed doors. Sooy leans into that, accepting that
-            “holding people accountable” gets labeled as “mean,” while arguing residents—not city employees—are his first
-            responsibility.
+            Millville’s political culture often looks contentious on camera, and Sooy doesn’t shy from that. He argues open debate is part of accountability—even when bluntness is labeled 
+            as “mean.” But from a campaign perspective, adding more structured outreach could broaden the picture: making his transparency and process-based approach visible in settings where 
+            residents aren’t tuning in to full meetings or multi-hour interviews.
             <br><br>
-            From an InformTheVoteNJ perspective, he’s responsive, willing to go beyond stump lines, and invites scrutiny of
-            the moving parts behind projects (CRP sale mechanics, Buckshutem due-diligence, façade grants, cannabis licensing
-            timelines). That pushes him into the above-average tier for transparency/accessibility—with room to go “top tier”
-            if he formalizes a simple public-facing progress cadence (e.g., quarterly status posts on in-flight projects).
+            From an InformTheVoteNJ standpoint, Sooy rates above average for transparency and accessibility because he engages directly and provides detailed answers. To push toward “top tier,” 
+            a few classic campaign elements—like a public event series, consistent web presence, or a simple quarterly progress update—would make his message and project tracking easier for 
+            voters to follow outside of City Hall.
             <br><br>
             Click the red x at the top of this box and then scroll down for more in-depth information and sources.
             </p>
@@ -210,10 +207,10 @@
             <div class="candidate-pic-box-content">
                 <h4 class="sub-heading" style="text-align: center;">Websites</h4>
                 <div class="website">
-                    <!-- Add/adjust links as available -->
-                    <a href="https://www.informthevotenj.com" target="_blank" rel="noopener noreferrer" class="website-link">
-                    <button class="candidate-ext-site">InformTheVoteNJ Profile</button>
-                    </a>
+                    
+                    <a href="https://www.facebook.com/joe.sooy.3" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
+
+                    
                 </div>
 
                 <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
