update dixon and kears pages

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -147,8 +147,46 @@
               </p>
             </div>
         </dialog>
+         <dialog id="Modal2" class="modal">
 
-        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
+              <h4 class="quick-sum">Rating Explanation</h4>
+              <h6 class="page-title">Dan Dixon</h6>
+              <p>          
+                Dan Dixon has taken meaningful steps to make himself accessible and transparent as a candidate for Millville City Commission. His campaign 
+                website goes further than most of his peers by outlining his platform in detail, giving voters a clear sense of his priorities and values. 
+                He has also scheduled a meet-and-greet in the coming weeks, signaling a willingness to show up in person and take questions directly from 
+                the community. When I spoke with him by phone, he was responsive and straightforward: he acknowledged my questionnaire, explained he needed 
+                more time to prepare thoughtful answers, and made it clear he intends to follow through before moving into interviews.
+                <br>
+                <br>
+                That balance—having some strong public-facing materials while also asking for a little breathing room on deeper questions—puts Dixon in a 
+                position that is better than average, but still shy of the highest standard. And to note, the overwhelming amount of candidates in the county 
+                don't reach top tier, because recent elections have raised the bar. Whether it's Donald Trump doing a 3 hour podcast or Steven Fulop outlining 
+                70 pages of policy, there are possibilities that go beyond the status quo of local politics. That being said, Dan's approach 
+                strongly suggests a candidate who values transparency and accessibility but is taking his time to make sure he does it the right way. 
+                In a county where voters too often get surface-level campaign blurbs, even this level of preparation already moves him into the 
+                “above average” category.
+                <br>
+                <br>
+                The question is what happens next. If Dixon follows through on his plan to complete the questionnaire, sit for interviews, and keep building 
+                a two-way channel with the public, he could easily rise into the top tier of transparency. The groundwork is there: he’s already 
+                engaging online, scheduling in-person events, and picking up the phone when asked. The next step is checking the remaining 'beyond status 
+                quo boxes'. Sometimes it's not about the individual candidate, but pushing the county towards a higher standard.
+                <br>
+                <br>
+                For now, Dixon earns an above-average transparency rating, with clear momentum toward the top tier. If he keeps building on what he has 
+                started, he could set a new expectation for what candidate accessibility looks like in Millville.
+                
+                <br>
+                <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+
+              </p>
+            </div>
+        </dialog>
 
 <div class="container">
 
@@ -195,7 +233,34 @@
          </div>
      </div>
 
-    <div class="title-info">
+     <br>
+     <br>
+
+    <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+    </div> 
+
+    <br>
+    <br>
+
+    <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
+
+        <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Meet and Greet BBQ</strong></li>
+                    <li class="description">"Join me for a fun filled "Meet and Greet" Barbecue on Saturday, September 6th from 1-4pm. I will have my yard 
+                        signs available to be picked up. We will have hot dogs and hamburgers and sides"
+                    </li>
+                    <li class="date-and-time">9/6/25</li>
+                    <li class="location">Impact Fitness and Martial Arts, 207 Bogden Blvd, Millville NJ 08332</li>
+                </ul>
+            </div>   
+    </details>
        
     <div class="candidate-agenda">
 
