--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -41,6 +41,8 @@
                                 <label for="first">County and Municipal Elections</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a></li>
+
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
 
                                     <!-- <li class="link"><a href="../../../child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
@@ -90,6 +92,8 @@
                                 <label for="fourth">Issues</label>
                                 <div class="nested-burger-links">
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/fairfield_township_issues.html">Fairfield Township Issues</a></li>
+
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
@@ -175,9 +179,21 @@
               <h6 class="page-title">Patricia Clark-Kears</h6>
               <p>          
 
-                Patricia Clark-Kears has provided a comprehensive platform detailing her background, experience, and specific proposals on a wide range of city issues. She has participated in a 
-                full-length radio interview and has already committed to an in-depth podcast discussion closer to the election. This level of openness, responsiveness, and willingness to 
-                engage with voters meets all the criteria for the highest transparency rating on this site.
+                Patricia Clark-Kears was one of the first candidates this cycle to respond directly, providing a detailed platform that outlined her 
+                background, experience, and proposals on Millville’s key issues. She also participated in a full-length radio interview and committed to an 
+                additional in-depth podcast discussion closer to the election. That willingness to engage upfront stands out in a local political culture 
+                where too many candidates remain vague or unavailable.
+                <br>
+                <br>
+                Originally, I rated her at the very top tier of transparency because of how quickly and clearly she cooperated compared to the status quo. 
+                But as the campaign has moved forward, I’ve noticed there have not yet been public campaign events announced or consistent social media 
+                activity beyond what we already covered together. In the interest of being transparent about my own ratings, I think it’s more accurate 
+                at this stage to place her in the “above average, trending toward top-tier” category.
+                <br>
+                <br>
+                That rating still reflects meaningful openness—she’s provided more to voters than many of her peers—but it also leaves room for growth as the 
+                campaign season unfolds. Continued visibility through events, regular updates, and follow-through on her commitment to future long-form 
+                interviews could easily solidify a top-tier rating.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -237,10 +253,10 @@
      <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: High </h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (trending upwards) </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_good.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
