holly city events added

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -252,13 +252,20 @@
 
         <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Holly City Fest</strong></li>
+                    <li class="description">Event Table Set Up to Meet Dan</li>
+                    <li class="date-and-time">8/30/25 11am-3pm</li>
+                    <li class="location">Riverfront "Buck" Park, Buck and Main St, Millville, NJ 08332</li>
+                </ul>
+                <ul class="event-info">
                     <li class="name"><strong>Meet and Greet BBQ</strong></li>
                     <li class="description">"Join me for a fun filled "Meet and Greet" Barbecue on Saturday, September 6th from 1-4pm. I will have my yard 
                         signs available to be picked up. We will have hot dogs and hamburgers and sides"
                     </li>
-                    <li class="date-and-time">9/6/25</li>
+                    <li class="date-and-time">9/6/25 1-4pm</li>
                     <li class="location">Impact Fitness and Martial Arts, 207 Bogden Blvd, Millville NJ 08332</li>
                 </ul>
+                
             </div>   
     </details>
        
