--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -61,11 +61,11 @@
                                 <input type="checkbox" name="accordion" id="second">
                                 <label for="second">School Board Elections</label>
                                 <div class="nested-burger-links">
-                                    <li class="link"><a href="../../../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
-                                    <li class="link"><a href="../../../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                                    <li class="link"><a href="../../../cc-elections/hopewell-shiloh_school_board.html">Hopewell/Shiloh Township School Board</a></li>
-                                    <li class="link"><a href="../../../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
-                                    <li class="link"><a href="../../../cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/hopewell-shiloh_school_board.html">Hopewell/Shiloh Township School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
 
                                     <!-- <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
                                     <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> --> 
@@ -119,7 +119,7 @@
                                     <li class="link"><a href="../cc-elections/us_president_issues.html">President Issues</a></li> -->
                                 </div>
                             </div>
-
+                            
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
                             <li class="link"><a href="../../../child_pages/resources-archives-and-rabbit-holes.html">Extra Info</a></li>
