root folder meta tags update

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -15,6 +15,12 @@
     <link rel="preload" href="../assets/events.jpg" as="image" type="image/jpg" />
     <script src="../app.js" async></script>
     <title>Inform The Vote</title>
+    <!-- Begin preview image meta tags -->
+        <meta property="og:title" content="Inform The Vote NJ">
+        <meta property="og:description" content="Election Information for Cumberland County Residents">
+        <meta property="og:image" content="http://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="http://informthevotenj.com">
+        <!-- End preview image meta tags -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
 <script>
