--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <script src="homepage_scripts.js" async></script>
         <!-- Begin preview image meta tags -->
         <meta property="og:title" content="Inform The Vote NJ">
-        <meta property="og:description" content="Election information for NJ residents">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:description" content="Election Information for Cumberland County Residents">
+        <meta property="og:image" content="http://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
         <meta property="og:url" content="http://informthevotenj.com">
         <!-- End preview image meta tags -->
 
