--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -13,6 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
     <title>Inform The Vote</title>
+    <!-- Begin preview image meta tags -->
+        <meta property="og:title" content="Inform The Vote NJ">
+        <meta property="og:description" content="Election Information for Cumberland County Residents">
+        <meta property="og:image" content="http://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="http://informthevotenj.com">
+        <!-- End preview image meta tags -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
 <script>
