meta tags testing

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -11,7 +11,7 @@
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - John P. Capizola">
         <meta property="og:description" content="Election information about John P. Capizola">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:image" content="http://www.informthevotenj.com/assets/candidates/capizola.jpg">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/capizola">
     </head>
 <!-- Google tag (gtag.js) -->
