--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -9,9 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Douglas A. Albreacht">
+        <meta property="og:title" content="Inform The Vote NJ - Douglas A. Albrecht">
         <meta property="og:description" content="Election information about Douglas A. Albrecht">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:image" content="http://www.informthevotenj.com/assets/candidates/albrecht.jpg">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/albrecht">
     </head>
 <!-- Google tag (gtag.js) -->
