--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -11,7 +11,7 @@
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Victoria K. Lods">
         <meta property="og:description" content="Election information about Victoria K. Lods">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:image" content="http://www.informthevotenj.com/assets/candidates/avif.png">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/lods">
     </head>
 <!-- Google tag (gtag.js) -->
