meta tag image test 2

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -11,8 +11,8 @@
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Douglas A. Albrecht">
         <meta property="og:description" content="Election information about Douglas A. Albrecht">
-        <meta property="og:image" content="http://www.informthevotenj.com/assets/candidates/albrecht.jpg">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/albrecht">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/albrecht.jpg">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/albrecht">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
